platform: tegra: enable pm-tegra186
Enable pm-tegra186 driver to disable non-boot CPUs during shutdown.

Bug 200729366

Change-Id: I7437493133a16e9c0db7e630458ac0ec8e3396a7
Signed-off-by: Rajkumar Kasirajan <rkasirajan@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/linux-nvidia/+/2538443
Reviewed-by: svc_kernel_abi <svc_kernel_abi@nvidia.com>
Reviewed-by: Bitan Biswas <bbiswas@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>

--- a/drivers/platform/tegra/Makefile
+++ b/drivers/platform/tegra/Makefile
@@ -26,7 +26,9 @@ obj-$(CONFIG_ARCH_TEGRA_18x_SOC) += tegra18_cpu_debugfs.o
 obj-$(CONFIG_TEGRA_PM_DEBUG) += pm.o
 obj-$(CONFIG_TEGRA_PM_DEBUG) += pm_debugfs.o
 obj-$(CONFIG_ARCH_TEGRA_18x_SOC) += reboot-t18x.o
-obj-$(CONFIG_ARCH_TEGRA_18x_SOC) += pm-tegra186.o
+ifneq ($(filter y,$(CONFIG_ARCH_TEGRA_18x_SOC) $(CONFIG_ARCH_TEGRA_186_SOC)),)
+obj-y += pm-tegra186.o
+endif
 obj-$(CONFIG_TEGRA_AON) += tegra186_aondbg.o
 obj-$(CONFIG_TEGRA_ARI_MCA) += ari_mca.o
 obj-$(CONFIG_TEGRA_18X_SERROR) += tegra18_serr.o
