bct: scr: Updaten BLF settings for NVDEC
Disabled write access for security groups NVG2, NVG4, NVG5, NVG6
and NVG7 from following NVDEC BLF register settings
CBB_CENTRAL_NOC_NVDEC_BLF_CONTROL_REGISTER_0
CBB_CENTRAL_NOC_NVDEC1_BLF_CONTROL_REGISTER_0

Also SEC_LCK bit is set.

Bug 200620424

Change-Id: I84283b136e3356ba4d04fec563a83d22fa1cbe14
Reviewed-on: https://git-master.nvidia.com/r/c/device/hardware/nvidia/platform/t19x/common/+/2538465
Reviewed-by: svcacv <svcacv@nvidia.com>
Reviewed-by: Dilan Lee <dilee@nvidia.com>
Reviewed-by: Nagesh G S <ngs@nvidia.com>
Reviewed-by: Sumeet Gupta <sumeetg@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
Tested-by: Praveen Kumar Reddy M.V. <pkreddy@nvidia.com>
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit

--- a/bct/scr/tegra194-mb1-bct-scr-cbb-mini-spi1-to-tz.cfg
+++ b/bct/scr/tegra194-mb1-bct-scr-cbb-mini-spi1-to-tz.cfg
@@ -12,7 +12,7 @@
 scr.major = 1;
 scr.minor = 0;
 
-# Chip version = 91;
+# Chip version = 93;
 # Platform version = 0;
 # Project version = 6;
 # SCR Section
@@ -2451,8 +2451,8 @@ scr.2430.4 = 0x38000303; # CBB_CENTRAL_NOC_HOST1X_ACTMON5_BLF_CONTROL_REGISTER_0
 scr.2431.4 = 0x3f008080; # CBB_CENTRAL_NOC_ISP_BLF_CONTROL_REGISTER_0
 scr.2432.4 = 0x3f00a0a0; # CBB_CENTRAL_NOC_ISP_THI_BLF_CONTROL_REGISTER_0
 scr.2433.4 = 0x3f00a0a0; # CBB_CENTRAL_NOC_NVCSI_BLF_CONTROL_REGISTER_0
-scr.2434.4 = 0x1800ffff; # CBB_CENTRAL_NOC_NVDEC_BLF_CONTROL_REGISTER_0
-scr.2435.4 = 0x1800ffff; # CBB_CENTRAL_NOC_NVDEC1_BLF_CONTROL_REGISTER_0
+scr.2434.4 = 0x38000bff; # CBB_CENTRAL_NOC_NVDEC_BLF_CONTROL_REGISTER_0
+scr.2435.4 = 0x38000bff; # CBB_CENTRAL_NOC_NVDEC1_BLF_CONTROL_REGISTER_0
 scr.2436.4 = 0x1800ffff; # CBB_CENTRAL_NOC_NVDISPLAY_BLF_CONTROL_REGISTER_0
 scr.2437.4 = 0x1800ffff; # CBB_CENTRAL_NOC_NVDLA0_BLF_CONTROL_REGISTER_0
 scr.2438.4 = 0x1800ffff; # CBB_CENTRAL_NOC_NVDLA1_BLF_CONTROL_REGISTER_0
