--- a/bct/scr/tegra194-mb1-bct-scr-cbb-mini.cfg
+++ b/bct/scr/tegra194-mb1-bct-scr-cbb-mini.cfg
@@ -1,7 +1,7 @@
 #
 # t194_cbb.cfg
 #
-# Copyright (c) 2017 - 2020, NVIDIA Corporation. All Rights Reserved.
+# Copyright (c) 2017 - 2021, NVIDIA Corporation. All Rights Reserved.
 #
 # NVIDIA Corporation and its licensors retain all intellectual property
 # and proprietary rights in and to this software and related documentation
@@ -12,7 +12,7 @@
 scr.major = 1;
 scr.minor = 0;
 
-# Chip version = 91;
+# Chip version = 93;
 # SCR Section
 scr.0.6 = 0x3c001010; # APS_AST_SCR_AST_GBL_SEC_CONTROL_0
 scr.1.6 = 0x390003ff; # APS_AST_SCR_AST_HYP_SEC_CONTROL_0
@@ -2449,8 +2449,8 @@ scr.2430.4 = 0x38000303; # CBB_CENTRAL_NOC_HOST1X_ACTMON5_BLF_CONTROL_REGISTER_0
 scr.2431.4 = 0x3f008080; # CBB_CENTRAL_NOC_ISP_BLF_CONTROL_REGISTER_0
 scr.2432.4 = 0x3f00a0a0; # CBB_CENTRAL_NOC_ISP_THI_BLF_CONTROL_REGISTER_0
 scr.2433.4 = 0x3f00a0a0; # CBB_CENTRAL_NOC_NVCSI_BLF_CONTROL_REGISTER_0
-scr.2434.4 = 0x1800ffff; # CBB_CENTRAL_NOC_NVDEC_BLF_CONTROL_REGISTER_0
-scr.2435.4 = 0x1800ffff; # CBB_CENTRAL_NOC_NVDEC1_BLF_CONTROL_REGISTER_0
+scr.2434.4 = 0x38000bff; # CBB_CENTRAL_NOC_NVDEC_BLF_CONTROL_REGISTER_0
+scr.2435.4 = 0x38000bff; # CBB_CENTRAL_NOC_NVDEC1_BLF_CONTROL_REGISTER_0
 scr.2436.4 = 0x1800ffff; # CBB_CENTRAL_NOC_NVDISPLAY_BLF_CONTROL_REGISTER_0
 scr.2437.4 = 0x1800ffff; # CBB_CENTRAL_NOC_NVDLA0_BLF_CONTROL_REGISTER_0
 scr.2438.4 = 0x1800ffff; # CBB_CENTRAL_NOC_NVDLA1_BLF_CONTROL_REGISTER_0
