dts: t23x: Adding MAUD clock id.
Exposing clock string namespace attached to clock ids in
BPMP to the RM to use it for the CLOCK and PLL programming
for Read/Write.

Jira Id TDS-6554

Change-Id: I55cc948737968f378f87362f29998caa391b92c7
Signed-off-by: Gaurav Madheshia <gmadheshia@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/device/hardware/nvidia/soc/t23x/+/2539646
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>

--- a/kernel-dts/tegra234-soc/tegra234-soc-base.dtsi
+++ b/kernel-dts/tegra234-soc/tegra234-soc-base.dtsi
@@ -942,7 +942,8 @@
 			 <&bpmp_clks TEGRA234_CLK_SOR0_REF>,
 			 <&bpmp_clks TEGRA234_CLK_SOR1_REF>,
 			 <&bpmp_clks TEGRA234_CLK_OSC>,
-			 <&bpmp_clks TEGRA234_CLK_DSC>;
+			 <&bpmp_clks TEGRA234_CLK_DSC>,
+			 <&bpmp_clks TEGRA234_CLK_MAUD>;
 		clock-names = "nvdisplayhub_clk",
 			      "nvdisplay_disp_clk",
 			      "nvdisplay_p0_clk",
@@ -998,7 +999,8 @@
 			      "sor0_ref_clk",
 			      "sor1_ref_clk",
 			      "osc_clk",
-			      "dsc_clk";
+			      "dsc_clk",
+			      "maud_clk";
 		resets = <&bpmp_resets TEGRA234_RESET_NVDISPLAY>,
 			 <&bpmp_resets TEGRA234_RESET_DPAUX>,
 			 <&bpmp_resets TEGRA234_RESET_HDA>,
