--- a/kernel-dts/tegra234-soc/tegra234-soc-fpga.dtsi
+++ b/kernel-dts/tegra234-soc/tegra234-soc-fpga.dtsi
@@ -324,7 +324,8 @@
 			 <&bpmp_clks TEGRA234_CLK_SOR0_REF>,
 			 <&bpmp_clks TEGRA234_CLK_SOR1_REF>,
 			 <&bpmp_clks TEGRA234_CLK_OSC>,
-			 <&bpmp_clks TEGRA234_CLK_DSC>;
+			 <&bpmp_clks TEGRA234_CLK_DSC>,
+			 <&bpmp_clks TEGRA234_CLK_MAUD>;
 		clock-names = "nvdisplayhub_clk",
 			      "nvdisplay_disp_clk",
 			      "nvdisplay_p0_clk",
@@ -380,7 +381,8 @@
 			      "sor0_ref_clk",
 			      "sor1_ref_clk",
 			      "osc_clk",
-			      "dsc_clk";
+			      "dsc_clk",
+			      "maud_clk";
 		resets = <&bpmp_resets TEGRA234_RESET_NVDISPLAY>,
 			 <&bpmp_resets TEGRA234_RESET_DPAUX>,
 			 <&bpmp_resets TEGRA234_RESET_HDA>,
