soc: t23x: cvm: Enable I2C nodes
I2C master nodes are needed for bringing up various
multimedia devices, I2C/GPIO expanders, I2C muxes.
This change enables the I2C master nodes for all
CVM based systems.

Bug 3294860

Change-Id: I9b07cdc68ce6021247af5113e6327a9c3dc7cd1e
Signed-off-by: Petlozu Pravareshwar <petlozup@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/device/hardware/nvidia/soc/t23x/+/2541416
Reviewed-by: svcacv <svcacv@nvidia.com>
Reviewed-by: svc_kernel_abi <svc_kernel_abi@nvidia.com>
Reviewed-by: Bitan Biswas <bbiswas@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>

--- a/kernel-dts/tegra234-soc/tegra234-soc-cvm.dtsi
+++ b/kernel-dts/tegra234-soc/tegra234-soc-cvm.dtsi
@@ -22,4 +22,35 @@
 #include <tegra234-soc/tegra234-soc-prod.dtsi>
 
 / {
+	i2c@3160000 {
+		status = "okay";
+	};
+
+	i2c@3180000 {
+		status = "okay";
+	};
+
+	i2c@3190000 {
+		status = "okay";
+	};
+
+	i2c@31b0000 {
+		status = "okay";
+	};
+
+	i2c@31c0000 {
+		status = "okay";
+	};
+
+	i2c@31e0000 {
+		status = "okay";
+	};
+
+	i2c@c240000 {
+		status = "okay";
+	};
+
+	i2c@c250000 {
+		status = "okay";
+	};
 };
