--- a/kernel-dts/tegra234-soc/tegra234-soc-pcie.dtsi
+++ b/kernel-dts/tegra234-soc/tegra234-soc-pcie.dtsi
@@ -363,8 +363,8 @@
 		power-domains = <&bpmp TEGRA234_POWER_DOMAIN_PCIEX8A>;
 		reg = <0x00 0x141a0000 0x0 0x00020000     /* appl registers (128K)      */
 			0x00 0x3a040000 0x0 0x00040000    /* iATU_DMA reg space (256K)  */
-			0x00 0x3a000000 0x0 0x00040000    /* configuration space (256K) */
-			0x2a 0x80000000 0x4 0x80000000>; /* Address Space (16G)        */
+			0x00 0x3a080000 0x0 0x00040000    /* DBI space (256K)           */
+			0x27 0x40000000 0x4 0x00000000>;  /* Address Space (16G)        */
 		reg-names = "appl", "atu_dma", "dbi", "addr_space";
 
 		#address-cells = <3>;
@@ -437,8 +437,8 @@
 		power-domains = <&bpmp TEGRA234_POWER_DOMAIN_PCIEX4A>;
 		reg = <0x00 0x141c0000 0x0 0x00020000     /* appl registers (128K)      */
 			0x00 0x3c040000 0x0 0x00040000    /* iATU_DMA reg space (256K)  */
-			0x00 0x3c000000 0x0 0x00040000    /* configuration space (256K) */
-			0x21 0x40000000 0x0 0x40000000>;  /* Address Space (1G)         */
+			0x00 0x3c080000 0x0 0x00040000    /* DBI space (256K)           */
+			0x2b 0x40000000 0x3 0x00000000>;  /* Address Space (12G)        */
 		reg-names = "appl", "atu_dma", "dbi", "addr_space";
 
 		#address-cells = <3>;
@@ -509,9 +509,9 @@
 		compatible = "nvidia,tegra234-pcie-ep", "snps,dw-pcie";
 		power-domains = <&bpmp TEGRA234_POWER_DOMAIN_PCIEX8B>;
 		reg = <0x00 0x141e0000 0x0 0x00020000     /* appl registers (128K)      */
-			0x00 0x28040000 0x0 0x00040000    /* iATU_DMA reg space (256K)  */
-			0x00 0x28000000 0x0 0x00040000    /* configuration space (256K) */
-			0x21 0x80000000 0x0 0x40000000>;  /* Address Space (1G)         */
+			0x00 0x3e040000 0x0 0x00040000    /* iATU_DMA reg space (256K)  */
+			0x00 0x3e080000 0x0 0x00040000    /* DBI space (256K)           */
+			0x2e 0x40000000 0x4 0x00000000>;  /* Address Space (16G)        */
 		reg-names = "appl", "atu_dma", "dbi", "addr_space";
 
 		#address-cells = <3>;
@@ -584,8 +584,8 @@
 		power-domains = <&bpmp TEGRA234_POWER_DOMAIN_PCIEX4CC>;
 		reg = <0x00 0x140e0000 0x0 0x00020000     /* appl registers (128K)      */
 			0x00 0x2e040000 0x0 0x00040000    /* iATU_DMA reg space (256K)  */
-			0x00 0x2e000000 0x0 0x00040000    /* configuration space (256K) */
-			0x22 0x40000000 0x0 0x40000000>;  /* Address Space (1G)         */
+			0x00 0x2e080000 0x0 0x00040000    /* DBI space (256K)           */
+			0x38 0x40000000 0x3 0x00000000>;  /* Address Space (12G)        */
 		reg-names = "appl", "atu_dma", "dbi", "addr_space";
 
 		#address-cells = <3>;
@@ -659,8 +659,9 @@
 		reg = <0x00 0x14180000 0x0 0x00020000   /* appl registers (128K)      */
 		       0x00 0x38000000 0x0 0x00040000   /* configuration space (256K) */
 		       0x00 0x38040000 0x0 0x00040000   /* iATU_DMA reg space (256K)  */
-		       0x00 0x38080000 0x0 0x00040000>; /* DBI reg space (256K)       */
-		reg-names = "appl", "config", "atu_dma", "dbi";
+		       0x00 0x38080000 0x0 0x00040000   /* DBI reg space (256K)       */
+		       0x27 0x30000000 0x0 0x10000000>; /* ECAM (256MB)               */
+		reg-names = "appl", "config", "atu_dma", "dbi", "ecam";
 
 		status = "disabled";
 
@@ -727,9 +728,9 @@
 		nvidia,aspm-l0s-entrance-latency-us = <3>;
 
 		bus-range = <0x0 0xff>;
-		ranges = <0x81000000 0x0 0x38100000 0x0 0x38100000 0x0 0x00100000      /* downstream I/O (1MB) */
-			  0x82000000 0x0 0x38200000 0x0 0x38200000 0x0 0x01E00000      /* non-prefetchable memory (30MB) */
-			  0xc2000000 0x26 0x80000000 0x26 0x80000000 0x4 0x00000000>;  /* prefetchable memory (16GB) */
+		ranges = <0x81000000 0x00 0x38100000 0x00 0x38100000 0x0 0x00100000      /* downstream I/O (1MB) */
+			  0x82000000 0x00 0x40000000 0x27 0x28000000 0x0 0x08000000      /* non-prefetchable memory (128MB) */
+			  0xc3000000 0x24 0x40000000 0x24 0x40000000 0x2 0xe8000000>;    /* prefetchable memory (11904MB) */
 
 		nvidia,cfg-link-cap-l1sub = <0x1b0>;
 		nvidia,cap-pl16g-status = <0x174>;
@@ -747,8 +748,9 @@
 		reg = <0x00 0x14100000 0x0 0x00020000   /* appl registers (128K)      */
 		       0x00 0x30000000 0x0 0x00040000   /* configuration space (256K) */
 		       0x00 0x30040000 0x0 0x00040000   /* iATU_DMA reg space (256K)  */
-		       0x00 0x30080000 0x0 0x00040000>; /* DBI reg space (256K)       */
-		reg-names = "appl", "config", "atu_dma", "dbi";
+		       0x00 0x30080000 0x0 0x00040000   /* DBI reg space (256K)       */
+		       0x20 0xb0000000 0x0 0x10000000>; /* ECAM (256MB)               */
+		reg-names = "appl", "config", "atu_dma", "dbi", "ecam";
 
 		status = "disabled";
 
@@ -815,9 +817,9 @@
 		nvidia,aspm-l0s-entrance-latency-us = <3>;
 
 		bus-range = <0x0 0xff>;
-		ranges = <0x81000000 0x0 0x30100000 0x0 0x30100000 0x0 0x00100000      /* downstream I/O (1MB) */
-			  0x82000000 0x0 0x30200000 0x0 0x30200000 0x0 0x01E00000      /* non-prefetchable memory (30MB) */
-			  0xc2000000 0x20 0x80000000 0x20 0x80000000 0x0 0x40000000>;  /* prefetchable memory (1GB) */
+		ranges = <0x81000000 0x00 0x30100000 0x00 0x30100000 0x0 0x00100000      /* downstream I/O (1MB) */
+			  0x82000000 0x00 0x40000000 0x20 0xa8000000 0x0 0x08000000      /* non-prefetchable memory (128MB) */
+			  0xc3000000 0x20 0x80000000 0x20 0x80000000 0x0 0x28000000>;    /* prefetchable memory (640MB) */
 
 		nvidia,cfg-link-cap-l1sub = <0x194>;
 		nvidia,cap-pl16g-status = <0x164>;
@@ -835,8 +837,9 @@
 		reg = <0x00 0x14120000 0x0 0x00020000   /* appl registers (128K)      */
 		       0x00 0x32000000 0x0 0x00040000   /* configuration space (256K) */
 		       0x00 0x32040000 0x0 0x00040000   /* iATU_DMA reg space (256K)  */
-		       0x00 0x32080000 0x0 0x00040000>; /* DBI reg space (256K)       */
-		reg-names = "appl", "config", "atu_dma", "dbi";
+		       0x00 0x32080000 0x0 0x00040000   /* DBI reg space (256K)       */
+		       0x20 0xf0000000 0x0 0x10000000>; /* ECAM (256MB)               */
+		reg-names = "appl", "config", "atu_dma", "dbi", "ecam";
 
 		status = "disabled";
 
@@ -902,9 +905,9 @@
 		nvidia,aspm-l0s-entrance-latency-us = <3>;
 
 		bus-range = <0x0 0xff>;
-		ranges = <0x81000000 0x0 0x32100000 0x0 0x32100000 0x0 0x00100000      /* downstream I/O (1MB) */
-			  0x82000000 0x0 0x32200000 0x0 0x32200000 0x0 0x01E00000      /* non-prefetchable memory (30MB) */
-			  0xc2000000 0x20 0xc0000000 0x20 0xc0000000 0x0 0x40000000>;  /* prefetchable memory (1GB) */
+		ranges = <0x81000000 0x00 0x32100000 0x00 0x32100000 0x0 0x00100000      /* downstream I/O (1MB) */
+			  0x82000000 0x00 0x40000000 0x20 0xe8000000 0x0 0x08000000      /* non-prefetchable memory (128MB) */
+			  0xc3000000 0x20 0xc0000000 0x20 0xc0000000 0x0 0x28000000>;    /* prefetchable memory (640MB) */
 
 		nvidia,cfg-link-cap-l1sub = <0x194>;
 		nvidia,cap-pl16g-status = <0x164>;
@@ -922,8 +925,9 @@
 		reg = <0x00 0x14140000 0x0 0x00020000   /* appl registers (128K)      */
 		       0x00 0x34000000 0x0 0x00040000   /* configuration space (256K) */
 		       0x00 0x34040000 0x0 0x00040000   /* iATU_DMA reg space (256K)  */
-		       0x00 0x34080000 0x0 0x00040000>; /* DBI reg space (256K)       */
-		reg-names = "appl", "config", "atu_dma", "dbi";
+		       0x00 0x34080000 0x0 0x00040000   /* DBI reg space (256K)       */
+		       0x21 0x30000000 0x0 0x10000000>; /* ECAM (256MB)               */
+		reg-names = "appl", "config", "atu_dma", "dbi", "ecam";
 
 		status = "disabled";
 
@@ -989,9 +993,9 @@
 		nvidia,aspm-l0s-entrance-latency-us = <3>;
 
 		bus-range = <0x0 0xff>;
-		ranges = <0x81000000 0x0 0x34100000 0x0 0x34100000 0x0 0x00100000      /* downstream I/O (1MB) */
-			  0x82000000 0x0 0x34200000 0x0 0x34200000 0x0 0x01E00000      /* non-prefetchable memory (30MB) */
-			  0xc2000000 0x21 0x00000000 0x21 0x00000000 0x0 0x40000000>;  /* prefetchable memory (1GB) */
+		ranges = <0x81000000 0x00 0x34100000 0x00 0x34100000 0x0 0x00100000      /* downstream I/O (1MB) */
+			  0x82000000 0x00 0x40000000 0x21 0x28000000 0x0 0x08000000      /* non-prefetchable memory (128MB) */
+			  0xc3000000 0x21 0x00000000 0x21 0x00000000 0x0 0x28000000>;    /* prefetchable memory (640MB) */
 
 		nvidia,cfg-link-cap-l1sub = <0x194>;
 		nvidia,cap-pl16g-status = <0x164>;
@@ -1009,8 +1013,9 @@
 		reg = <0x00 0x14160000 0x0 0x00020000   /* appl registers (128K)      */
 		       0x00 0x36000000 0x0 0x00040000   /* configuration space (256K) */
 		       0x00 0x36040000 0x0 0x00040000   /* iATU_DMA reg space (256K)  */
-		       0x00 0x36080000 0x0 0x00040000>; /* DBI reg space (256K)       */
-		reg-names = "appl", "config", "atu_dma", "dbi";
+		       0x00 0x36080000 0x0 0x00040000   /* DBI reg space (256K)       */
+		       0x24 0x30000000 0x0 0x10000000>; /* ECAM (256MB)               */
+		reg-names = "appl", "config", "atu_dma", "dbi", "ecam";
 
 		status = "disabled";
 
@@ -1076,9 +1081,9 @@
 		nvidia,aspm-l0s-entrance-latency-us = <3>;
 
 		bus-range = <0x0 0xff>;
-		ranges = <0x81000000 0x0 0x36100000 0x0 0x36100000 0x0 0x00100000      /* downstream I/O (1MB) */
-			  0x82000000 0x0 0x36200000 0x0 0x36200000 0x0 0x01E00000      /* non-prefetchable memory (30MB) */
-			  0xc2000000 0x22 0x80000000 0x22 0x80000000 0x4 0x00000000>;  /* prefetchable memory (16GB) */
+		ranges = <0x81000000 0x00 0x36100000 0x00 0x36100000 0x0 0x00100000      /* downstream I/O (1MB) */
+			  0x82000000 0x00 0x40000000 0x24 0x28000000 0x0 0x08000000      /* non-prefetchable memory (128MB) */
+			  0xc3000000 0x21 0x40000000 0x21 0x40000000 0x2 0xe8000000>;    /* prefetchable memory (11904MB) */
 
 		nvidia,cfg-link-cap-l1sub = <0x1b0>;
 		nvidia,cap-pl16g-status = <0x174>;
@@ -1096,8 +1101,9 @@
 		reg = <0x00 0x141a0000 0x0 0x00020000   /* appl registers (128K)      */
 		       0x00 0x3a000000 0x0 0x00040000   /* configuration space (256K) */
 		       0x00 0x3a040000 0x0 0x00040000   /* iATU_DMA reg space (256K)  */
-		       0x00 0x3a080000 0x0 0x00040000>; /* DBI reg space (256K)       */
-		reg-names = "appl", "config", "atu_dma", "dbi";
+		       0x00 0x3a080000 0x0 0x00040000   /* DBI reg space (256K)       */
+		       0x2b 0x30000000 0x0 0x10000000>; /* ECAM (256MB)               */
+		reg-names = "appl", "config", "atu_dma", "dbi", "ecam";
 
 		status = "disabled";
 
@@ -1164,9 +1170,9 @@
 		nvidia,aspm-l0s-entrance-latency-us = <3>;
 
 		bus-range = <0x0 0xff>;
-		ranges = <0x81000000 0x0 0x3a100000 0x0 0x3a100000 0x0 0x00100000      /* downstream I/O (1MB) */
-			  0x82000000 0x0 0x3a200000 0x0 0x3a200000 0x0 0x01E00000      /* non-prefetchable memory (30MB) */
-			  0xc2000000 0x2a 0x80000000 0x2a 0x80000000 0x4 0x00000000>;  /* prefetchable memory (16GB) */
+		ranges = <0x81000000 0x00 0x3a100000 0x00 0x3a100000 0x0 0x00100000      /* downstream I/O (1MB) */
+			  0x82000000 0x00 0x40000000 0x2b 0x28000000 0x0 0x08000000      /* non-prefetchable memory (128MB) */
+			  0xc3000000 0x27 0x40000000 0x27 0x40000000 0x3 0xe8000000>;    /* prefetchable memory (16000MB) */
 
 		nvidia,cfg-link-cap-l1sub = <0x1c4>;
 		nvidia,cap-pl16g-status = <0x174>;
@@ -1184,8 +1190,9 @@
 		reg = <0x00 0x141c0000 0x0 0x00020000   /* appl registers (128K)      */
 		       0x00 0x3c000000 0x0 0x00040000   /* configuration space (256K) */
 		       0x00 0x3c040000 0x0 0x00040000   /* iATU_DMA reg space (256K)  */
-		       0x00 0x3c080000 0x0 0x00040000>; /* DBI reg space (256K)       */
-		reg-names = "appl", "config", "atu_dma", "dbi";
+		       0x00 0x3c080000 0x0 0x00040000   /* DBI reg space (256K)       */
+		       0x2e 0x30000000 0x0 0x10000000>; /* ECAM (256MB)               */
+		reg-names = "appl", "config", "atu_dma", "dbi", "ecam";
 
 		status = "disabled";
 
@@ -1252,9 +1259,9 @@
 		nvidia,aspm-l0s-entrance-latency-us = <3>;
 
 		bus-range = <0x0 0xff>;
-		ranges = <0x81000000 0x0 0x3c100000 0x0 0x3c100000 0x0 0x00100000      /* downstream I/O (1MB) */
-			  0x82000000 0x0 0x3c200000 0x0 0x3c200000 0x0 0x01E00000      /* non-prefetchable memory (30MB) */
-			  0xc2000000 0x21 0x40000000 0x21 0x40000000 0x0 0x40000000>;  /* prefetchable memory (1GB) */
+		ranges = <0x81000000 0x00 0x3c100000 0x00 0x3c100000 0x0 0x00100000      /* downstream I/O (1MB) */
+			  0x82000000 0x00 0x40000000 0x2e 0x28000000 0x0 0x08000000      /* non-prefetchable memory (128MB) */
+			  0xc3000000 0x2b 0x40000000 0x2b 0x40000000 0x2 0xe8000000>;    /* prefetchable memory (11904MB) */
 
 		nvidia,cfg-link-cap-l1sub = <0x1b0>;
 		nvidia,cap-pl16g-status = <0x174>;
@@ -1270,10 +1277,11 @@
 		compatible = "nvidia,tegra234-pcie", "snps,dw-pcie";
 		power-domains = <&bpmp TEGRA234_POWER_DOMAIN_PCIEX8B>;
 		reg = <0x00 0x141e0000 0x0 0x00020000   /* appl registers (128K)      */
-		       0x00 0x28000000 0x0 0x00040000   /* configuration space (256K) */
-		       0x00 0x28040000 0x0 0x00040000   /* iATU_DMA reg space (256K)  */
-		       0x00 0x28080000 0x0 0x00040000>; /* DBI reg space (256K)       */
-		reg-names = "appl", "config", "atu_dma", "dbi";
+		       0x00 0x3e000000 0x0 0x00040000   /* configuration space (256K) */
+		       0x00 0x3e040000 0x0 0x00040000   /* iATU_DMA reg space (256K)  */
+		       0x00 0x3e080000 0x0 0x00040000   /* DBI reg space (256K)       */
+		       0x32 0x30000000 0x0 0x10000000>; /* ECAM (256MB)               */
+		reg-names = "appl", "config", "atu_dma", "dbi", "ecam";
 
 		status = "disabled";
 
@@ -1340,9 +1348,9 @@
 		nvidia,aspm-l0s-entrance-latency-us = <3>;
 
 		bus-range = <0x0 0xff>;
-		ranges = <0x81000000 0x0 0x28100000 0x0 0x28100000 0x0 0x00100000      /* downstream I/O (1MB) */
-			  0x82000000 0x0 0x28200000 0x0 0x28200000 0x0 0x01E00000      /* non-prefetchable memory (30MB) */
-			  0xc2000000 0x21 0x80000000 0x21 0x80000000 0x0 0x40000000>;  /* prefetchable memory (1GB) */
+		ranges = <0x81000000 0x00 0x3e100000 0x00 0x3e100000 0x0 0x00100000      /* downstream I/O (1MB) */
+			  0x82000000 0x00 0x40000000 0x32 0x28000000 0x0 0x08000000      /* non-prefetchable memory (128MB) */
+			  0xc3000000 0x2e 0x40000000 0x2e 0x40000000 0x3 0xe8000000>;    /* prefetchable memory (16000MB) */
 
 		nvidia,cfg-link-cap-l1sub = <0x1c4>;
 		nvidia,cap-pl16g-status = <0x174>;
@@ -1360,8 +1368,9 @@
 		reg = <0x00 0x140a0000 0x0 0x00020000   /* appl registers (128K)      */
 		       0x00 0x2a000000 0x0 0x00040000   /* configuration space (256K) */
 		       0x00 0x2a040000 0x0 0x00040000   /* iATU_DMA reg space (256K)  */
-		       0x00 0x2a080000 0x0 0x00040000>; /* DBI reg space (256K)       */
-		reg-names = "appl", "config", "atu_dma", "dbi";
+		       0x00 0x2a080000 0x0 0x00040000   /* DBI reg space (256K)       */
+		       0x35 0x30000000 0x0 0x10000000>; /* ECAM (256MB)               */
+		reg-names = "appl", "config", "atu_dma", "dbi", "ecam";
 
 		status = "disabled";
 
@@ -1428,9 +1437,9 @@
 		nvidia,aspm-l0s-entrance-latency-us = <3>;
 
 		bus-range = <0x0 0xff>;
-		ranges = <0x81000000 0x0 0x2a100000 0x0 0x2a100000 0x0 0x00100000      /* downstream I/O (1MB) */
-			  0x82000000 0x0 0x2a200000 0x0 0x2a200000 0x0 0x01E00000      /* non-prefetchable memory (30MB) */
-			  0xc2000000 0x21 0xc0000000 0x21 0xc0000000 0x0 0x40000000>;  /* prefetchable memory (1GB) */
+		ranges = <0x81000000 0x00 0x2a100000 0x00 0x2a100000 0x0 0x00100000      /* downstream I/O (1MB) */
+			  0x82000000 0x00 0x40000000 0x35 0x28000000 0x0 0x08000000      /* non-prefetchable memory (128MB) */
+			  0xc3000000 0x32 0x40000000 0x32 0x40000000 0x2 0xe8000000>;    /* prefetchable memory (11904MB) */
 
 		nvidia,cfg-link-cap-l1sub = <0x1b0>;
 		nvidia,cap-pl16g-status = <0x174>;
@@ -1448,8 +1457,9 @@
 		reg = <0x00 0x140c0000 0x0 0x00020000   /* appl registers (128K)      */
 		       0x00 0x2c000000 0x0 0x00040000   /* configuration space (256K) */
 		       0x00 0x2c040000 0x0 0x00040000   /* iATU_DMA reg space (256K)  */
-		       0x00 0x2c080000 0x0 0x00040000>; /* DBI reg space (256K)       */
-		reg-names = "appl", "config", "atu_dma", "dbi";
+		       0x00 0x2c080000 0x0 0x00040000   /* DBI reg space (256K)       */
+		       0x38 0x30000000 0x0 0x10000000>; /* ECAM (256MB)               */
+		reg-names = "appl", "config", "atu_dma", "dbi", "ecam";
 
 		status = "disabled";
 
@@ -1516,9 +1526,9 @@
 		nvidia,aspm-l0s-entrance-latency-us = <3>;
 
 		bus-range = <0x0 0xff>;
-		ranges = <0x81000000 0x0 0x2c100000 0x0 0x2c100000 0x0 0x00100000      /* downstream I/O (1MB) */
-			  0x82000000 0x0 0x2c200000 0x0 0x2c200000 0x0 0x01E00000      /* non-prefetchable memory (30MB) */
-			  0xc2000000 0x22 0x00000000 0x22 0x00000000 0x0 0x40000000>;  /* prefetchable memory (1GB) */
+		ranges = <0x81000000 0x00 0x2c100000 0x00 0x2c100000 0x0 0x00100000      /* downstream I/O (1MB) */
+			  0x82000000 0x00 0x40000000 0x38 0x28000000 0x0 0x08000000      /* non-prefetchable memory (128MB) */
+			  0xc3000000 0x35 0x40000000 0x35 0x40000000 0x2 0xe8000000>;    /* prefetchable memory (11904MB) */
 
 		nvidia,cfg-link-cap-l1sub = <0x1b0>;
 		nvidia,cap-pl16g-status = <0x174>;
@@ -1536,8 +1546,9 @@
 		reg = <0x00 0x140e0000 0x0 0x00020000   /* appl registers (128K)      */
 		       0x00 0x2e000000 0x0 0x00040000   /* configuration space (256K) */
 		       0x00 0x2e040000 0x0 0x00040000   /* iATU_DMA reg space (256K)  */
-		       0x00 0x2e080000 0x0 0x00040000>; /* DBI reg space (256K)       */
-		reg-names = "appl", "config", "atu_dma", "dbi";
+		       0x00 0x2e080000 0x0 0x00040000   /* DBI reg space (256K)       */
+		       0x3b 0x30000000 0x0 0x10000000>; /* ECAM (256MB)               */
+		reg-names = "appl", "config", "atu_dma", "dbi", "ecam";
 
 		status = "disabled";
 
@@ -1604,9 +1615,9 @@
 		nvidia,aspm-l0s-entrance-latency-us = <3>;
 
 		bus-range = <0x0 0xff>;
-		ranges = <0x81000000 0x0 0x2e100000 0x0 0x2e100000 0x0 0x00100000      /* downstream I/O (1MB) */
-			  0x82000000 0x0 0x2e200000 0x0 0x2e200000 0x0 0x01E00000      /* non-prefetchable memory (30MB) */
-			  0xc2000000 0x22 0x40000000 0x22 0x40000000 0x0 0x40000000>;  /* prefetchable memory (1GB) */
+		ranges = <0x81000000 0x00 0x2e100000 0x00 0x2e100000 0x0 0x00100000      /* downstream I/O (1MB) */
+			  0x82000000 0x00 0x40000000 0x3b 0x28000000 0x0 0x08000000      /* non-prefetchable memory (128MB) */
+			  0xc3000000 0x38 0x40000000 0x38 0x40000000 0x2 0xe8000000>;    /* prefetchable memory (11904MB) */
 
 		nvidia,cfg-link-cap-l1sub = <0x1b0>;
 		nvidia,cap-pl16g-status = <0x174>;
