dts: soc: t19x: Set PERST# and CLREQ# pinctrl settings as default in EP
Tegra194 PCIe driver support default pinctrl seetings for both root port
and endpoint. Set PERST# and CLREQ# pinctrl settings as default in EP.

Bug 200712436

Change-Id: I9baf608d4c72d455add08cdeaa3a245f0b355b23
Signed-off-by: Manikanta Maddireddy <mmaddireddy@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/device/hardware/nvidia/soc/t19x/+/2542668
Reviewed-by: svcacv <svcacv@nvidia.com>
Reviewed-by: Vidya Sagar <vidyas@nvidia.com>
Reviewed-by: svc_kernel_abi <svc_kernel_abi@nvidia.com>
Reviewed-by: Bibek Basu <bbasu@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit

--- a/kernel-dts/tegra194-soc/tegra194-soc-pcie.dtsi
+++ b/kernel-dts/tegra194-soc/tegra194-soc-pcie.dtsi
@@ -641,9 +641,8 @@
 		interrupts = <0 53 0x04>;	/* controller interrupt */
 		interrupt-names = "intr";
 
-		pinctrl-names = "pex_rst", "clkreq";
-		pinctrl-0 = <&pex_rst_c5_in_state>;
-		pinctrl-1 = <&clkreq_c5_bi_dir_state>;
+		pinctrl-names = "default";
+		pinctrl-0 = <&pex_rst_c5_in_state>, <&clkreq_c5_bi_dir_state>;
 
 		nvidia,max-speed = <4>;
 		nvidia,bar0-size = <0x100000>;	/* 1 MB */
