pva: implement submit ioctl
Implement PVA V2 task submission ioctl. Implementation follows PVA V2
QNX driver except:

1. Range checks for DMA descriptors are left out since they are
still under development in QNX driver.

2. Task buffers are managed by nvhost buffers instead of private
implementation. As a result, submit pin look up is done through
searching RB tree instead of O(1) array indexing.

3. Semaphore increment is tracked by client context instead of by each
buffer record. Since semaphore value is opaque to the user, it makes no
behavioral difference. The benefit is less intrusive changes to nvhost
buffers.

Jira PVA-2181
Jira PVA-2191
Jira PVA-2192
Jira PVA-2193

Change-Id: I4cdef44aa7c64ce75b249af6d8c951ad9c17f066
Signed-off-by: Nan Wang <nanwa@nvidia.com>
Signed-off-by: omar nemri <onemri@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/linux-nvidia/+/2543568
Reviewed-by: svc_kernel_abi <svc_kernel_abi@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit

--- a/drivers/video/tegra/host/pva/Makefile
+++ b/drivers/video/tegra/host/pva/Makefile
@@ -30,7 +30,8 @@ nvhost-pva-objs  = \
 		pva_selftest.o \
 		nvpva_elf_parser.o \
 		pva_vpu_exe.o \
-		nvpva_client.o
+		nvpva_client.o \
+		pva_dma.o
 
 obj-$(V2) += nvhost-pva.o
 
