Add macsec instance id
Added macsec instance id which will be used in TZ to
identify macsec HW instance

Bug 3324237

Change-Id: Ibde43ddc53dc979a343845ca0127150433a4f332
Signed-off-by: Mahesh Patil <maheshp@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/device/hardware/nvidia/soc/t23x/+/2542897
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
Reviewed-by: svcacv <svcacv@nvidia.com>
Reviewed-by: Bhadram Varka <vbhadram@nvidia.com>
Reviewed-by: svc_kernel_abi <svc_kernel_abi@nvidia.com>
Reviewed-by: Ajay Gupta <ajayg@nvidia.com>
Reviewed-by: Ashutosh Jha <ajha@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit

--- a/kernel-dts/tegra234-soc/tegra234-soc-eqos.dtsi
+++ b/kernel-dts/tegra234-soc/tegra234-soc-eqos.dtsi
@@ -100,5 +100,6 @@
 		nvidia,slot_num_check = <0x0 0x0 0x0 0x0 0x0 0x0 0x0 0x0>;
 		nvidia,slot_intvl_vals = <0x0 0x7D 0x7D 0x7D 0x7D 0x7D 0x7D 0x7D>;
 		nvidia,ptp_ref_clock_speed = <208300000>;
+		nvidia,instance_id = <4>; /* EQOS instance */
 	};
 };
