--- a/kernel-dts/tegra234-soc/tegra234-soc-mgbe.dtsi
+++ b/kernel-dts/tegra234-soc/tegra234-soc-mgbe.dtsi
@@ -112,6 +112,7 @@
 		nvidia,slot_num_check = <0x0 0x0 0x0 0x0 0x0 0x0 0x0 0x0 0x0 0x0>;
 		nvidia,slot_intvl_vals = <0x0 0x7D 0x7D 0x7D 0x7D 0x7D 0x7D 0x7D 0x7D 0x7D>;
 		nvidia,ptp_ref_clock_speed = <312500000>;
+		nvidia,instance_id = <0>; /* MGBE0 instance */
 	};
 
 	ethernet@6910000 {
@@ -178,6 +179,7 @@
 		nvidia,slot_num_check = <0x0 0x0 0x0 0x0 0x0 0x0 0x0 0x0 0x0 0x0>;
 		nvidia,slot_intvl_vals = <0x0 0x7D 0x7D 0x7D 0x7D 0x7D 0x7D 0x7D 0x7D 0x7D>;
 		nvidia,ptp_ref_clock_speed = <312500000>;
+		nvidia,instance_id = <1>; /* MGBE1 instance */
 	};
 
 	ethernet@6A10000 {
@@ -244,6 +246,7 @@
 		nvidia,slot_num_check = <0x0 0x0 0x0 0x0 0x0 0x0 0x0 0x0 0x0 0x0>;
 		nvidia,slot_intvl_vals = <0x0 0x7D 0x7D 0x7D 0x7D 0x7D 0x7D 0x7D 0x7D 0x7D>;
 		nvidia,ptp_ref_clock_speed = <312500000>;
+		nvidia,instance_id = <2>; /* MGBE2 instance */
 	};
 
 	ethernet@6B10000 {
@@ -310,5 +313,6 @@
 		nvidia,slot_num_check = <0x0 0x0 0x0 0x0 0x0 0x0 0x0 0x0 0x0 0x0>;
 		nvidia,slot_intvl_vals = <0x0 0x7D 0x7D 0x7D 0x7D 0x7D 0x7D 0x7D 0x7D 0x7D>;
 		nvidia,ptp_ref_clock_speed = <312500000>;
+		nvidia,instance_id = <3>; /* MGBE3 instance */
 	};
 };
