platform: tegra: k5.10: TEGRA_CACHE enable
Enable TEGRA_CACHE in external kernel k5.10 builds

Bug 200731226

Change-Id: Iad5dde46eb59cb4d37a4b5bd3ec6c59c623ebdc4
Signed-off-by: Bitan Biswas <bbiswas@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/linux-nvidia/+/2543043
Reviewed-by: svcacv <svcacv@nvidia.com>
Reviewed-by: svc_kernel_abi <svc_kernel_abi@nvidia.com>
Reviewed-by: Bibek Basu <bbasu@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit

--- a/drivers/platform/tegra/Kconfig
+++ b/drivers/platform/tegra/Kconfig
@@ -127,7 +127,7 @@ config TEGRA_MCE
 
 config TEGRA_CACHE
 	bool "Enable Tegra Cache Driver"
-	default y if (ARCH_TEGRA_18x_SOC || ARCH_TEGRA_19x_SOC || ARCH_TEGRA_23x_SOC)
+	default y if (ARCH_TEGRA_18x_SOC || ARCH_TEGRA_19x_SOC || ARCH_TEGRA_23x_SOC || ARCH_TEGRA_186_SOC || ARCH_TEGRA_194_SOC)
 	help
 	  Enable Tegra Cache driver for Various cache operations.
 
