drivers: iommu: Enable ARM_SMMU_SUSPEND from Kconfig
ARM_SMMU_SUSPEND is getting removed from defconfig to be upstream aligned.
So keep it enabled by default from Kconfig.

Bug 200640894

Change-Id: I45374d9a4a86f9b3eb952a9779235ed86eb653e4
Signed-off-by: Ashish Mhetre <amhetre@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/linux-nvidia/+/2543197
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>
Reviewed-by: Sachin Nikam <snikam@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>

--- a/drivers/iommu/Kconfig
+++ b/drivers/iommu/Kconfig
@@ -12,7 +12,7 @@ config TEGRA_ARM_SMMU_T19x
 config ARM_SMMU_SUSPEND
 	bool "ARM SMMU SUSPEND"
 	depends on (ARM_SMMU && PM_SLEEP)
-	default n
+	default y
 	help
 	  Support for ARM System MMU suspend where all the required SMMU
 	  registers will be saved to memory and upon resume warmboot/bootloader
