t19x: soc: sdhci: Set DDR clock limit for SDMMC1/3
Tegra automotive platforms support eMMC in DDR mode on
SDMMC1/3 instances.
Add dt property setting limits on the ddr clock rate.

Bug 3318751

Change-Id: I94c6f51983b2d7f4c01d7a64516f6d36fcd94b4c
Signed-off-by: Aniruddha Rao <anrao@nvidia.com>
Reviewed-on: https://git-master.nvidia.com/r/c/device/hardware/nvidia/soc/t19x/+/2543253
Reviewed-by: svcacv <svcacv@nvidia.com>
Reviewed-by: svc_kernel_abi <svc_kernel_abi@nvidia.com>
Reviewed-by: Bibek Basu <bbasu@nvidia.com>
Reviewed-by: mobile promotions <svcmobile_promotions@nvidia.com>
GVS: Gerrit_Virtual_Submit
Tested-by: mobile promotions <svcmobile_promotions@nvidia.com>

--- a/kernel-dts/tegra194-soc/tegra194-soc-sdhci.dtsi
+++ b/kernel-dts/tegra194-soc/tegra194-soc-sdhci.dtsi
@@ -101,6 +101,7 @@
 #endif
 		dma-coherent;
 		max-clk-limit = <208000000>;
+		ddr-clk-limit = <51000000>;
 		bus-width = <4>;
 		cap-mmc-highspeed;
 		cap-sd-highspeed;
@@ -168,6 +169,7 @@
 #endif
 		dma-coherent;
 		max-clk-limit = <208000000>;
+		ddr-clk-limit = <51000000>;
 		bus-width = <4>;
 		cap-mmc-highspeed;
 		cap-sd-highspeed;
